--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Test GitHub</title>
   </head>
   <body>
-    <h1>This is a GitHub test</h1>
+    <h1>This is a GitHub test 2</h1>
+    <h3>commit how?</h3>
   </body>
 </html>
